<resources>
    <string name="app_name" translatable="false">SLApp</string>
    <string name="shopping_bag_desc" translatable="false">Shopping List Item</string>
    <string name="itemview_user_placeholder" translatable="false">Michael</string>
    <string name="itemview_text_placeholder" translatable="false">Item name\nup to 2 lines</string>
    <string name="itemview_time_placeholder" translatable="false">16:15</string>
    <string name="new_item_hint">Enter Item</string>
    <string name="action_delete" translatable="false">Delete Selected Items</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="tab_items" translatable="false">Items</string>
    <string name="tab_users" translatable="false">Users</string>
    <string name="action_copy" translatable="false">Copy Selected Items</string>
    <string name="action_select_all" translatable="false">Select All Items</string>
    <string name="action_undo" translatable="false">Undo</string>
    <string name="toast_deleted">%1$d Items Removed</string>
    <string name="list_preview_transition_name" translatable="false">list_preview_%1$d</string>
    <string name="list_transition_name" translatable="false">list</string>
    <string name="new_list_hint">Enter List Name</string>
    <string name="create_list_button">Create List</string>
    <string name="add_users_title">Add Participants</string>
    <string name="content_decsription_selected" translatable="false">Selected</string>
    <string name="action_search" translatable="false">Search</string>
    <string name="search_hint">Search Contacts</string>
    <string name="prefix_972" translatable="false">+972</string>
    <string name="enter_number_hint">Your Phone Number</string>
    <string name="sign_in">Sign In</string>
    <string name="error_invalid_number">Invalid Phone Number</string>
    <string name="error_verification_failed">Verification Failed</string>
    <string name="enter_code_hint">Enter Verification Code</string>
    <string name="send_code">Send Verification Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="error_invalid_code">Invalid Verification Code</string>
    <string name="contact_you">You</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="add_people">Add Participants</string>
    <string name="tap_details">tap for list details</string>
    <string name="shopping_cart_desc">tap on items to add them to cart</string>
    <string name="action_shopping_done">Done</string>
    <string name="action_shopping_cancel">Cancel</string>
    <string name="action_add_to_cart" translatable="false">Add To Cart</string>
    <string name="exit_dialog_title">Close the List?</string>
    <string name="exit_dialog_message">All items in the shopping cart will be returned to the list.</string>
    <string name="exit_dialog_pos">Exit</string>
    <string name="exit_dialog_neg">Cancel</string>
    <string name="permission_dialog_message">To share lists with people you know, <B>SlApp</B> needs to access your contacts.</string>
    <string name="permission_dialog_pos">OK</string>
    <string name="request_permission">Access Contacts</string>
    <string name="action_edit">Edit Title</string>
    <string name="favorite">favorite</string>
    <string name="notification_title">%1$s has bought items from %2$s</string>
    <string name="notification_text">tap to view items</string>
    <string name="view_items_subtitle">%1$s at %2$s</string>
    <string name="welcome">welcome!</string>
</resources>