<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_home_background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/shopping_bag_desc"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowColor="@color/primaryCenterColor"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/welcome"
        android:fontFamily="sans-serif-condensed-medium"
        android:textAllCaps="true"
        android:textColor="@color/iconColor"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="4dp"
        android:hint="@string/enter_number_hint"
        app:boxBackgroundColor="@color/backgroundColor"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:prefixText="@string/prefix_972"
        app:prefixTextColor="@color/accentColor">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/primaryTextColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_send_code"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_code"
        android:textAppearance="@style/AppTitle"
        android:textColor="@color/color_disableable_button"
        app:layout_constraintEnd_toEndOf="@+id/field_phone"
        app:layout_constraintTop_toBottomOf="@+id/field_phone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="4dp"
        android:hint="@string/enter_code_hint"
        android:visibility="gone"
        app:boxBackgroundColor="@color/backgroundColor"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@+id/btn_send_code">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/primaryTextColor" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_sign_in"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAppearance="@style/AppTitle"
        android:textColor="@color/color_disableable_button"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/field_code"
        app:layout_constraintTop_toBottomOf="@+id/field_code" />

    <Button
        android:id="@+id/btn_resend_code"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_code"
        android:textAppearance="@style/AppTitle"
        android:textColor="@color/primaryTextColor"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/btn_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/field_code" />

</androidx.constraintlayout.widget.ConstraintLayout>