<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:elevation="10dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    app:layout_behavior=".ui.components.BottomSheetUpNavBehavior">

    <LinearLayout
        android:id="@+id/view_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/shape_sheet"
        android:backgroundTint="@color/primaryDarkColor"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:elevation="4dp"
            android:text="@string/shopping_cart"
            android:textColor="@color/iconColor"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:elevation="4dp"
            android:text="@string/shopping_cart_desc"
            android:textColor="@color/primaryLightColor"
            android:textSize="14sp" />

    </LinearLayout>

    <ImageView
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/shopping_cart"
        android:elevation="4dp"
        android:src="@drawable/shape_pill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primaryColor" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/shopping_cart"
        android:elevation="4dp"
        android:src="@drawable/ic_shopping_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/iconColor" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        app:layout_constraintBottom_toTopOf="@id/view_bottom"
        app:layout_constraintTop_toBottomOf="@+id/view_title"
        tools:listitem="@layout/view_item_small" />

    <View
        android:id="@+id/view_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_cancel" />

    <Button
        android:id="@+id/btn_done"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/action_shopping_done"
        android:textColor="@color/iconColor"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/action_shopping_cancel"
        android:textColor="@color/iconColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_done" />

</androidx.constraintlayout.widget.ConstraintLayout>